--- a/birthday.html
+++ b/birthday.html
@@ -104,9 +104,10 @@
   <div class="container">
     <h1>🎉 Happy Birthday, My Princess, Min Tha Mee Lay, Baby Pyae Pyae! 🎉</h1>
     <p>
-      I love you more than everything in the world! 💖✨ Please stay by my side till enternity 😘. I wish you to do well in <strong>tomorrow exam!</strong> 
-    </p>    
-    <img id="birthday_photo" src="6206158667220978892_121.jpg" alt="pic01" srcset="" height="300px"width="250px">
+      I love you more than everything in the world! 💖✨ Please stay by my side till enternity 😘. I wish you to do well in <strong>tomorrow exam!</strong> </p>
+    <p>ကိုကို့မီးမီးလေးပျော်ရွှင်ချမ်း‌မြေ့ပါစေ 💖✨   </p>
+   
+      <img id="birthday_photo" src="6206158667220978892_121.jpg" alt="pic01" srcset="" height="300px"width="250px">
 
    <p style="color:pink; font-style: italic; "><strong>Our Special Song</strong></p>
    
@@ -137,3 +138,4 @@
 
 </body>
 </html>
+
